--- a/index.html
+++ b/index.html
@@ -1,154 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JQuery AddRemove Class for SPA Menu</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
- <head>
-<body>
-  <div class="atas">
-    <ul class="subatas">
-      <li class="Menu"><a href="#Menu">Menu</a></li>
-      <br>
-      <li class="learn"><a href=#learn>learn</a></li>
-      <br>
-      <li class="Profie"><a href="#Profie">Profie</a></li>
-    </ul>
-  </div>
-  <br>
-  <br>
-  <br>
-    <div class="INFO Menu">
-      <h1>
-        WELLCOME BROTHER
-      </h1>
-      <img class="gambarhome" src="1.jpg">
-    </div>
-    <div class="INFO learn">
-      <h1>HTML</h1>
-        <p>
-         Hyh1ertext Markup Language adalah bahasa markah standar untuk dokumen yang dirancang untuk ditampilkan di peramban internet. Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets dan bahasa skrip seperti JavaScript dan VBScript.
-       </p>
-       <br>
-      <h1>CSS</h1>
-        <p>
-         Cascading Style Sheet merupakan aturan untuk mengatur beberapa komponen dalam sebuah web sehingga akan lebih terstruktur dan seragam. CSS bukan merupakan bahasa pemrograman
-       </p>
-       <br>
-      <h1>jQuery</h1>
-       <p>
-        jQuery adalah pustaka JavaScript lintas-platform yang didesain untuk menyederhanakan client-side scripting pada HTML
-       </p>
-    </div>
-    <div class="INFO Profie">
-      <img class="gambarprofile" src="2.jpg">
-      <br>
-      <h1>AGUNG SAEFUL</h1>
-      <br>
-      <p>
-        Salam Kenal, Saya Agung saeful dari Cirebon Seorang Mahasiswa di STMIK IKMI Cirebon prodi Teknik Informatika
-      </p>
-    </div>
-</body>
-
-<style type="text/css">
-*{
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  font-family: "Open Sans",sans-serif;
-}
-
-.atas{
-  background: linear-gradient(to right, #B63FB2, #6843AA); 
-  height: 90px;
-}
-
-.active{
-  
-}
-
-.Menu, .learn, .Profie{
-  list-style-type:none;
-  list-style-position:outside
-}
-
-.subatas{
-  float: right;
-  display: flex;
-  align-items: center;
-  min-height: 90px;
-  color: white;
-}
-
- .subatas li{
-  margin-left: 10px;
-  text-transform: uppercase;
-  font-size: 14px;
-  padding: 12px 20px;
-  border-radius: 4px;
-  transition: .3s linear;
-
-}
-
-.subatas li:hover{
-  transform: scale(1.7);
-  color: white;
-}
-
-.gambarhome{
-  height: 40%;
-  width: 40%;
-  margin-top: 5px;
-}
-
-.gambarprofile{
-  width:  4cm;
-  border-radius: 50%;
-  box-shadow: 1px 1px 4px gray;
-  padding: 5px;
-  background: white;
-  margin: 15px;
-  transition: 0.2s;
-  opacity: 90%;
-  display : block; margin: 0 auto;
-}
-
-.INFO {
-  width: 90%;
-  height: auto;
-  position: fixed;
-  top: 130px;
-  right: 0;
-  margin-right: -150%;
-}
-
-.INFO.Menu.active,
-.INFO.learn.active,
-.INFO.Profie.active {
-  margin-right: 0;
-  font-size: 20px;
-  text-align: center;
-  color: #B63FB2;
-  margin-left: 70px;
-  margin-right: 70px;
-  
-}
-</style>
-
-<script type="text/javascript">
-  $('li').click(function() {
-   var subMenu = $(this).attr('class').substring(-1,7);
-     $("div.INFO").removeClass('active');
-     if ( !$( this ).hasClass( 'active' ) ) {
-       $("div."+subMenu).addClass('active');
-   }
-
-  $(this).siblings().removeClass('active');
-  $(this).toggleClass('active');
-});
+<script language="javascript">
+<!--
+// == Begin Free HTML Source Code Obfuscation Protection from https://snapbuilder.com == //
+document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%20%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%68%74%74%70%2D%65%71%75%69%76%3D%22%58%2D%55%41%2D%43%6F%6D%70%61%74%69%62%6C%65%22%20%63%6F%6E%74%65%6E%74%3D%22%49%45%3D%65%64%67%65%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%4A%51%75%65%72%79%20%41%64%64%52%65%6D%6F%76%65%20%43%6C%61%73%73%20%66%6F%72%20%53%50%41%20%4D%65%6E%75%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%61%6A%61%78%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%61%6A%61%78%2F%6C%69%62%73%2F%6A%71%75%65%72%79%2F%33%2E%36%2E%30%2F%6A%71%75%65%72%79%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%3C%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%61%74%61%73%22%3E%0A%20%20%20%20%3C%75%6C%20%63%6C%61%73%73%3D%22%73%75%62%61%74%61%73%22%3E%0A%20%20%20%20%20%20%3C%6C%69%20%63%6C%61%73%73%3D%22%4D%65%6E%75%22%3E%3C%61%20%68%72%65%66%3D%22%23%4D%65%6E%75%22%3E%4D%65%6E%75%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%3C%6C%69%20%63%6C%61%73%73%3D%22%6C%65%61%72%6E%22%3E%3C%61%20%68%72%65%66%3D%23%6C%65%61%72%6E%3E%6C%65%61%72%6E%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%3C%6C%69%20%63%6C%61%73%73%3D%22%50%72%6F%66%69%65%22%3E%3C%61%20%68%72%65%66%3D%22%23%50%72%6F%66%69%65%22%3E%50%72%6F%66%69%65%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%3C%2F%75%6C%3E%0A%20%20%3C%2F%64%69%76%3E%0A%20%20%3C%62%72%3E%0A%20%20%3C%62%72%3E%0A%20%20%3C%62%72%3E%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%49%4E%46%4F%20%4D%65%6E%75%22%3E%0A%20%20%20%20%20%20%3C%68%31%3E%0A%20%20%20%20%20%20%20%20%57%45%4C%4C%43%4F%4D%45%20%42%52%4F%54%48%45%52%0A%20%20%20%20%20%20%3C%2F%68%31%3E%0A%20%20%20%20%20%20%3C%69%6D%67%20%63%6C%61%73%73%3D%22%67%61%6D%62%61%72%68%6F%6D%65%22%20%73%72%63%3D%22%31%2E%6A%70%67%22%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%49%4E%46%4F%20%6C%65%61%72%6E%22%3E%0A%20%20%20%20%20%20%3C%68%31%3E%48%54%4D%4C%3C%2F%68%31%3E%0A%20%20%20%20%20%20%20%20%3C%70%3E%0A%20%20%20%20%20%20%20%20%20%48%79%68%31%65%72%74%65%78%74%20%4D%61%72%6B%75%70%20%4C%61%6E%67%75%61%67%65%20%61%64%61%6C%61%68%20%62%61%68%61%73%61%20%6D%61%72%6B%61%68%20%73%74%61%6E%64%61%72%20%75%6E%74%75%6B%20%64%6F%6B%75%6D%65%6E%20%79%61%6E%67%20%64%69%72%61%6E%63%61%6E%67%20%75%6E%74%75%6B%20%64%69%74%61%6D%70%69%6C%6B%61%6E%20%64%69%20%70%65%72%61%6D%62%61%6E%20%69%6E%74%65%72%6E%65%74%2E%20%49%6E%69%20%64%61%70%61%74%20%64%69%62%61%6E%74%75%20%6F%6C%65%68%20%74%65%6B%6E%6F%6C%6F%67%69%20%73%65%70%65%72%74%69%20%43%61%73%63%61%64%69%6E%67%20%53%74%79%6C%65%20%53%68%65%65%74%73%20%64%61%6E%20%62%61%68%61%73%61%20%73%6B%72%69%70%20%73%65%70%65%72%74%69%20%4A%61%76%61%53%63%72%69%70%74%20%64%61%6E%20%56%42%53%63%72%69%70%74%2E%0A%20%20%20%20%20%20%20%3C%2F%70%3E%0A%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%3C%68%31%3E%43%53%53%3C%2F%68%31%3E%0A%20%20%20%20%20%20%20%20%3C%70%3E%0A%20%20%20%20%20%20%20%20%20%43%61%73%63%61%64%69%6E%67%20%53%74%79%6C%65%20%53%68%65%65%74%20%6D%65%72%75%70%61%6B%61%6E%20%61%74%75%72%61%6E%20%75%6E%74%75%6B%20%6D%65%6E%67%61%74%75%72%20%62%65%62%65%72%61%70%61%20%6B%6F%6D%70%6F%6E%65%6E%20%64%61%6C%61%6D%20%73%65%62%75%61%68%20%77%65%62%20%73%65%68%69%6E%67%67%61%20%61%6B%61%6E%20%6C%65%62%69%68%20%74%65%72%73%74%72%75%6B%74%75%72%20%64%61%6E%20%73%65%72%61%67%61%6D%2E%20%43%53%53%20%62%75%6B%61%6E%20%6D%65%72%75%70%61%6B%61%6E%20%62%61%68%61%73%61%20%70%65%6D%72%6F%67%72%61%6D%61%6E%0A%20%20%20%20%20%20%20%3C%2F%70%3E%0A%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%3C%68%31%3E%6A%51%75%65%72%79%3C%2F%68%31%3E%0A%20%20%20%20%20%20%20%3C%70%3E%0A%20%20%20%20%20%20%20%20%6A%51%75%65%72%79%20%61%64%61%6C%61%68%20%70%75%73%74%61%6B%61%20%4A%61%76%61%53%63%72%69%70%74%20%6C%69%6E%74%61%73%2D%70%6C%61%74%66%6F%72%6D%20%79%61%6E%67%20%64%69%64%65%73%61%69%6E%20%75%6E%74%75%6B%20%6D%65%6E%79%65%64%65%72%68%61%6E%61%6B%61%6E%20%63%6C%69%65%6E%74%2D%73%69%64%65%20%73%63%72%69%70%74%69%6E%67%20%70%61%64%61%20%48%54%4D%4C%0A%20%20%20%20%20%20%20%3C%2F%70%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%49%4E%46%4F%20%50%72%6F%66%69%65%22%3E%0A%20%20%20%20%20%20%3C%69%6D%67%20%63%6C%61%73%73%3D%22%67%61%6D%62%61%72%70%72%6F%66%69%6C%65%22%20%73%72%63%3D%22%32%2E%6A%70%67%22%3E%0A%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%3C%68%31%3E%41%47%55%4E%47%20%53%41%45%46%55%4C%3C%2F%68%31%3E%0A%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%3C%70%3E%0A%20%20%20%20%20%20%20%20%53%61%6C%61%6D%20%4B%65%6E%61%6C%2C%20%53%61%79%61%20%41%67%75%6E%67%20%73%61%65%66%75%6C%20%64%61%72%69%20%43%69%72%65%62%6F%6E%20%53%65%6F%72%61%6E%67%20%4D%61%68%61%73%69%73%77%61%20%64%69%20%53%54%4D%49%4B%20%49%4B%4D%49%20%43%69%72%65%62%6F%6E%20%70%72%6F%64%69%20%54%65%6B%6E%69%6B%20%49%6E%66%6F%72%6D%61%74%69%6B%61%0A%20%20%20%20%20%20%3C%2F%70%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%0A%3C%2F%62%6F%64%79%3E%0A%0A%3C%73%74%79%6C%65%20%74%79%70%65%3D%22%74%65%78%74%2F%63%73%73%22%3E%0A%2A%7B%0A%20%20%6D%61%72%67%69%6E%3A%20%30%3B%0A%20%20%70%61%64%64%69%6E%67%3A%20%30%3B%0A%20%20%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%22%4F%70%65%6E%20%53%61%6E%73%22%2C%73%61%6E%73%2D%73%65%72%69%66%3B%0A%7D%0A%0A%2E%61%74%61%73%7B%0A%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%6C%69%6E%65%61%72%2D%67%72%61%64%69%65%6E%74%28%74%6F%20%72%69%67%68%74%2C%20%23%42%36%33%46%42%32%2C%20%23%36%38%34%33%41%41%29%3B%20%0A%20%20%68%65%69%67%68%74%3A%20%39%30%70%78%3B%0A%7D%0A%0A%2E%61%63%74%69%76%65%7B%0A%20%20%0A%7D%0A%0A%2E%4D%65%6E%75%2C%20%2E%6C%65%61%72%6E%2C%20%2E%50%72%6F%66%69%65%7B%0A%20%20%6C%69%73%74%2D%73%74%79%6C%65%2D%74%79%70%65%3A%6E%6F%6E%65%3B%0A%20%20%6C%69%73%74%2D%73%74%79%6C%65%2D%70%6F%73%69%74%69%6F%6E%3A%6F%75%74%73%69%64%65%0A%7D%0A%0A%2E%73%75%62%61%74%61%73%7B%0A%20%20%66%6C%6F%61%74%3A%20%72%69%67%68%74%3B%0A%20%20%64%69%73%70%6C%61%79%3A%20%66%6C%65%78%3B%0A%20%20%61%6C%69%67%6E%2D%69%74%65%6D%73%3A%20%63%65%6E%74%65%72%3B%0A%20%20%6D%69%6E%2D%68%65%69%67%68%74%3A%20%39%30%70%78%3B%0A%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%7D%0A%0A%20%2E%73%75%62%61%74%61%73%20%6C%69%7B%0A%20%20%6D%61%72%67%69%6E%2D%6C%65%66%74%3A%20%31%30%70%78%3B%0A%20%20%74%65%78%74%2D%74%72%61%6E%73%66%6F%72%6D%3A%20%75%70%70%65%72%63%61%73%65%3B%0A%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%34%70%78%3B%0A%20%20%70%61%64%64%69%6E%67%3A%20%31%32%70%78%20%32%30%70%78%3B%0A%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%34%70%78%3B%0A%20%20%74%72%61%6E%73%69%74%69%6F%6E%3A%20%2E%33%73%20%6C%69%6E%65%61%72%3B%0A%0A%7D%0A%0A%2E%73%75%62%61%74%61%73%20%6C%69%3A%68%6F%76%65%72%7B%0A%20%20%74%72%61%6E%73%66%6F%72%6D%3A%20%73%63%61%6C%65%28%31%2E%37%29%3B%0A%20%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%0A%7D%0A%0A%2E%67%61%6D%62%61%72%68%6F%6D%65%7B%0A%20%20%68%65%69%67%68%74%3A%20%34%30%25%3B%0A%20%20%77%69%64%74%68%3A%20%34%30%25%3B%0A%20%20%6D%61%72%67%69%6E%2D%74%6F%70%3A%20%35%70%78%3B%0A%7D%0A%0A%2E%67%61%6D%62%61%72%70%72%6F%66%69%6C%65%7B%0A%20%20%77%69%64%74%68%3A%20%20%34%63%6D%3B%0A%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%30%25%3B%0A%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%31%70%78%20%31%70%78%20%34%70%78%20%67%72%61%79%3B%0A%20%20%70%61%64%64%69%6E%67%3A%20%35%70%78%3B%0A%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%77%68%69%74%65%3B%0A%20%20%6D%61%72%67%69%6E%3A%20%31%35%70%78%3B%0A%20%20%74%72%61%6E%73%69%74%69%6F%6E%3A%20%30%2E%32%73%3B%0A%20%20%6F%70%61%63%69%74%79%3A%20%39%30%25%3B%0A%20%20%64%69%73%70%6C%61%79%20%3A%20%62%6C%6F%63%6B%3B%20%6D%61%72%67%69%6E%3A%20%30%20%61%75%74%6F%3B%0A%7D%0A%0A%2E%49%4E%46%4F%20%7B%0A%20%20%77%69%64%74%68%3A%20%39%30%25%3B%0A%20%20%68%65%69%67%68%74%3A%20%61%75%74%6F%3B%0A%20%20%70%6F%73%69%74%69%6F%6E%3A%20%66%69%78%65%64%3B%0A%20%20%74%6F%70%3A%20%31%33%30%70%78%3B%0A%20%20%72%69%67%68%74%3A%20%30%3B%0A%20%20%6D%61%72%67%69%6E%2D%72%69%67%68%74%3A%20%2D%31%35%30%25%3B%0A%7D%0A%0A%2E%49%4E%46%4F%2E%4D%65%6E%75%2E%61%63%74%69%76%65%2C%0A%2E%49%4E%46%4F%2E%6C%65%61%72%6E%2E%61%63%74%69%76%65%2C%0A%2E%49%4E%46%4F%2E%50%72%6F%66%69%65%2E%61%63%74%69%76%65%20%7B%0A%20%20%6D%61%72%67%69%6E%2D%72%69%67%68%74%3A%20%30%3B%0A%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%32%30%70%78%3B%0A%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%20%20%63%6F%6C%6F%72%3A%20%23%42%36%33%46%42%32%3B%0A%20%20%6D%61%72%67%69%6E%2D%6C%65%66%74%3A%20%37%30%70%78%3B%0A%20%20%6D%61%72%67%69%6E%2D%72%69%67%68%74%3A%20%37%30%70%78%3B%0A%20%20%0A%7D%0A%3C%2F%73%74%79%6C%65%3E%0A%0A%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%3E%0A%20%20%24%28%27%6C%69%27%29%2E%63%6C%69%63%6B%28%66%75%6E%63%74%69%6F%6E%28%29%20%7B%0A%20%20%20%76%61%72%20%73%75%62%4D%65%6E%75%20%3D%20%24%28%74%68%69%73%29%2E%61%74%74%72%28%27%63%6C%61%73%73%27%29%2E%73%75%62%73%74%72%69%6E%67%28%2D%31%2C%37%29%3B%0A%20%20%20%20%20%24%28%22%64%69%76%2E%49%4E%46%4F%22%29%2E%72%65%6D%6F%76%65%43%6C%61%73%73%28%27%61%63%74%69%76%65%27%29%3B%0A%20%20%20%20%20%69%66%20%28%20%21%24%28%20%74%68%69%73%20%29%2E%68%61%73%43%6C%61%73%73%28%20%27%61%63%74%69%76%65%27%20%29%20%29%20%7B%0A%20%20%20%20%20%20%20%24%28%22%64%69%76%2E%22%2B%73%75%62%4D%65%6E%75%29%2E%61%64%64%43%6C%61%73%73%28%27%61%63%74%69%76%65%27%29%3B%0A%20%20%20%7D%0A%0A%20%20%24%28%74%68%69%73%29%2E%73%69%62%6C%69%6E%67%73%28%29%2E%72%65%6D%6F%76%65%43%6C%61%73%73%28%27%61%63%74%69%76%65%27%29%3B%0A%20%20%24%28%74%68%69%73%29%2E%74%6F%67%67%6C%65%43%6C%61%73%73%28%27%61%63%74%69%76%65%27%29%3B%0A%7D%29%3B%0A%3C%2F%73%63%72%69%70%74%3E%0A%0A%3C%68%74%6D%6C%3E'));
+//-->
 </script>
-
-<html>
